test/tests/stages/18_structures/invalid_parse/arrow_missing_member.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  struct
  identifier(s)
  {
  int
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  *
  identifier(ptr)
  =
  const int(0)
  ;
  return
  identifier(ptr)
  ->
  ;
  }
